feat: add error styles
Add error styles for displaying error messages and highlighting error inputs.

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -18,3 +18,12 @@
 .text-sm {
   font-size: $fs-400;
 }
+
+.error {
+  margin-top: 8px;
+  color: $clr-error;
+}
+
+.error-input {
+  border-color: $clr-error;
+}
